--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <title>Classes</title>
   </head>
@@ -13,5 +14,6 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
   </body>
 </html>
